--- a/.github/workflows/cd_dev.yml
+++ b/.github/workflows/cd_dev.yml
@@ -8,7 +8,7 @@ on:
 jobs:
   redeploy:
     name: Deploying the app to dev
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
 
     steps:
       - name: Execute remote SSH commands using SSH key
