--- a/.github/workflows/cd_prod.yml
+++ b/.github/workflows/cd_prod.yml
@@ -8,7 +8,7 @@ on:
 jobs:
   redeploy:
     name: Deploying the app to prod
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
 
     steps:
       - name: Execute remote SSH commands using SSH key
