fixing erros on dev cd

--- a/.github/workflows/cd_dev.yml
+++ b/.github/workflows/cd_dev.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   redeploy:
-    name: Deploying the app to dev
+    name: Deploying the app to development
     runs-on: self-hosted
 
     steps:
